tests/paczka1/fuzzy1/17240957.err
Error in line 9: WySwK5k7 A132 81,2
Error in line 15: A132 S42 15,7
Error in line 20: Qh3ZaV2PRa S42 47,0
